--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "angular-gravatar": "^0.4.2",
     "angular-sanitize": "^1.5.5",
     "angular-resource": "^1.5.6",
-    "pdfmake": "^0.1.20"
+    "pdfmake": "^0.1.20",
+    "angular-route": "^1.5.6"
   }
 }
