--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "angular-sanitize": "^1.5.5",
     "angular-resource": "^1.5.6",
     "pdfmake": "^0.1.20",
-    "angular-route": "^1.5.6"
+    "angular-route": "^1.5.6",
+    "angular-material-data-table": "^0.10.9"
   }
 }
